# lunch-menu-refactoring

./: LICENSE  Main.py  README.md  pyproject.toml
note/: Untitled.ipynb  endpoint.ipynb  syncdb.ipynb
pages/: 1_Input_lunch_menu.py  2_Check_Agent.py  3_Statistics.py  4_Analysis.py  4_Bulk_insert.py  5_Age_calc_Api.py  6_Api_Sync.py  6_Bulk_insert.py
src/lunch_menu_refactoring/: constants.py  db.py
