[project]
name = "lunch-menu-refactoring"
version = "0.1.0"
description = "It's about menu-eda"
authors = [
    {name = "jacob-53", email = "jacob8753@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "BSD"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
